--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -20,29 +20,341 @@ a {
   text-decoration: none;
 }
 
+.container nav {
+  top: 0;
+  z-index: 1;
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: rgba(255, 255, 255, 0.971);
+  font-family: "Consolas", "Poppins", sans-serif;
+  padding: 1.4rem 11vw;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.container nav a h1 {
+  font-size: 1.5rem;
+  color: #0c0c0c;
+}
+
+.container nav ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style-type: decimal-leading-zero;
+}
+
+.container nav ul li {
+  font-size: 1.3rem;
+  margin: auto 2.5rem;
+  color: #0c0c0c;
+}
+
+.container nav ul li a {
+  color: #0c0c0c;
+}
+
+.container nav img {
+  display: none;
+  float: right;
+  padding: 0.1rem;
+  margin: -0.7rem;
+}
+
+.container .main-alignment {
+  margin: 0 auto;
+  padding: 1rem;
+  max-width: 80%;
+  width: 100%;
+}
+
+.container .main-alignment header {
+  padding: 1rem;
+  margin-top: 15.1%;
+}
+
+.container .main-alignment header .wrapper {
+  padding: 1rem;
+  -webkit-animation: introLoad 1s forwards;
+          animation: introLoad 1s forwards;
+}
+
+.container .main-alignment header .wrapper .main {
+  padding: 1rem;
+}
+
+.container .main-alignment header .wrapper .main h1 {
+  font-size: 5vw;
+  width: auto;
+}
+
+.container .main-alignment header .wrapper .main h1 span {
+  color: #d4d4d4;
+  background-color: #0f0f0f;
+}
+
+.container .main-alignment header .wrapper .main .btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin: 2rem auto;
+}
+
+.container .main-alignment header .wrapper .main .btn-container a {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border: solid 0.2rem black;
+  color: black;
+  margin: 0 0.2rem;
+  padding: 0.5rem 1.2rem;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 0.7rem;
+}
+
+.container .main-alignment header .wrapper .main .btn-container a:hover {
+  -webkit-box-shadow: 0 0 0 0.2rem black;
+          box-shadow: 0 0 0 0.2rem black;
+  background-color: black;
+  color: #e0dfdf;
+  -webkit-transition: opacity 0.5s, border 0.3s;
+  transition: opacity 0.5s, border 0.3s;
+}
+
+.container .main-alignment header .wrapper .about {
+  margin: 10rem 4rem;
+  padding: 2rem;
+  max-width: 60rem;
+  -webkit-animation: introLoad 0.9s forwards;
+          animation: introLoad 0.9s forwards;
+}
+
+.container .main-alignment header .wrapper .about .margin {
+  margin-top: 13rem;
+}
+
+.container .main-alignment header .wrapper .about .margin h2 {
+  font-weight: normal;
+  font-size: 3rem;
+  padding: 1rem;
+  -webkit-transition: 1s;
+  transition: 1s;
+  border-bottom: solid 0.1rem;
+}
+
+.container .main-alignment header .wrapper .about .margin h2 div {
+  color: #e6e1e1 !important;
+  margin: -1.8rem auto;
+}
+
+.container .main-alignment header .wrapper .about .margin h2 span {
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  color: #1a1a1a;
+  background-color: #0f0f0f;
+}
+
+.container .main-alignment header .wrapper .about .margin p {
+  margin-top: 1.5rem;
+  color: #f3f3f3;
+  padding: 1rem 2rem;
+  font-size: 1.5rem;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.container .main-alignment header .wrapper .about .margin p i {
+  color: #f3f3f3;
+  font-size: 4rem;
+  margin: 2rem 0.3rem;
+}
+
+.container .main-alignment header .wrapper .projects {
+  padding: 2rem;
+  max-width: 100%;
+  -webkit-animation: introLoad 0.9s forwards;
+          animation: introLoad 0.9s forwards;
+}
+
+.container .main-alignment header .wrapper .projects .margin {
+  margin-top: 13rem;
+}
+
+.container .main-alignment header .wrapper .projects .margin h1 {
+  font-weight: normal;
+  font-size: 3rem;
+  padding: 1rem;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card {
+  border: solid 0.1rem white;
+  margin: 1rem auto;
+  padding: 1.3rem;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card .info {
+  float: left;
+  padding: 0.2rem;
+  width: 50%;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card .info h1 {
+  padding: 0.4rem;
+  font-size: 2.5rem;
+  color: #eeeeee !important;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card .info p {
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  color: #cccccc;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card .info .technologies-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 0.5rem;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card .info .technologies-container i {
+  color: white;
+  font-size: 3rem;
+  margin: 0 0.5rem;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card .info .btn-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card .info .btn-container a {
+  color: white;
+  border: solid 0.1rem white;
+  margin: 1rem 0.5rem;
+  padding: 0.5rem 1.5rem;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card .info .btn-container a:hover {
+  background-color: white;
+  color: black;
+  -webkit-transition: opacity 0.3s, border 0.3s;
+  transition: opacity 0.3s, border 0.3s;
+}
+
+.container .main-alignment header .wrapper .projects .margin .card img {
+  width: 50%;
+  padding: 0.1rem;
+}
+
+.container .main-alignment header .wrapper .contact {
+  padding: 2rem;
+  max-width: 50%;
+  -webkit-animation: introLoad 0.9s forwards;
+          animation: introLoad 0.9s forwards;
+}
+
+.container .main-alignment header .wrapper .contact .margin {
+  margin-top: 15rem;
+}
+
+.container .main-alignment header .wrapper .contact .margin h1 {
+  font-weight: normal;
+  font-size: 3rem;
+  padding: 1rem;
+  -webkit-transition: 1s;
+  transition: 1s;
+}
+
+.container .main-alignment header .wrapper .contact .margin .container {
+  background-color: transparent !important;
+  padding: 20px;
+  /* Style the submit button with a specific background color etc */
+  /* When moving the mouse over the submit button, add a darker green color */
+}
+
+.container .main-alignment header .wrapper .contact .margin .container label {
+  color: #e9e9e9;
+}
+
+.container .main-alignment header .wrapper .contact .margin .container input[type="text"],
+.container .main-alignment header .wrapper .contact .margin .container select,
+.container .main-alignment header .wrapper .contact .margin .container textarea {
+  font-family: "Consolas", "Poppins", sans-serif;
+  background-color: transparent !important;
+  color: white;
+  width: 100%;
+  /* Full width */
+  padding: 1rem 1rem;
+  /* Some padding */
+  font-size: 1.2rem;
+  border: 1px solid #ccc;
+  /* Gray border */
+  margin-top: 6px;
+  /* Add a top margin */
+  margin-bottom: 16px;
+  /* Bottom margin */
+  resize: vertical;
+  /* Allow the user to vertically resize the textarea (not horizontally) */
+}
+
+.container .main-alignment header .wrapper .contact .margin .container button {
+  font-family: "Poppins", "Consolas", sans-serif;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border: solid 0.2rem black;
+  color: black !important;
+  margin: 0 0.2rem;
+  padding: 0.5rem 1.2rem;
+  font-size: 20px;
+  text-transform: uppercase;
+  letter-spacing: 0.7rem;
+  cursor: pointer;
+}
+
+.container .main-alignment header .wrapper .contact .margin .container button:hover {
+  -webkit-box-shadow: 0 0 0 0.2rem black;
+          box-shadow: 0 0 0 0.2rem black;
+  background-color: black;
+  color: #e0dfdf !important;
+  -webkit-transition: opacity 0.5s, border 0.3s;
+  transition: opacity 0.5s, border 0.3s;
+}
+
 .dark {
   background-color: #0c0c0c !important;
 }
 
-.dark nav {
+.dark .container nav {
   background-color: rgba(12, 12, 12, 0.971);
 }
 
-.dark nav ul li {
+.dark .container nav ul li {
   color: white !important;
 }
 
-.dark nav ul li a {
+.dark .container nav ul li a {
   color: white !important;
 }
 
 .dark h1 {
   color: white !important;
-}
-
-.dark h1 span {
-  color: #0f0f0f !important;
-  background-color: white !important;
 }
 
 .dark button {
@@ -73,347 +385,5 @@ a {
 
 .dark .about .text p {
   color: white !important;
-}
-
-nav {
-  top: 0;
-  z-index: 1;
-  position: fixed;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  background-color: rgba(255, 255, 255, 0.971);
-  padding: 1rem 0;
-  width: 100%;
-  margin: 0 auto;
-}
-
-nav .container {
-  max-width: 95%;
-  padding: 1rem 2.3rem;
-}
-
-nav a {
-  float: left;
-}
-
-nav a h1 {
-  font-family: "Poppins", "Consolas", sans-serif;
-  margin: -0.5rem;
-  font-size: 2rem;
-  font-weight: normal;
-  color: #0c0c0c;
-}
-
-nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style-type: none;
-  -webkit-box-pack: right;
-      -ms-flex-pack: right;
-          justify-content: right;
-}
-
-nav ul li {
-  font-size: 1.4rem;
-  margin: auto 1rem;
-  color: #0c0c0c;
-}
-
-nav ul li a {
-  color: #0c0c0c;
-}
-
-nav img {
-  display: none;
-  float: right;
-  padding: 0.1rem;
-  margin: -0.7rem;
-}
-
-.container {
-  margin: 0 auto;
-  max-width: 66.5%;
-  width: 100%;
-}
-
-.container header {
-  margin: 18rem 0;
-}
-
-.container header .wrapper {
-  -webkit-animation: introLoad 0.9s forwards;
-          animation: introLoad 0.9s forwards;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.container header .wrapper h1 {
-  font-size: 5vw;
-  -webkit-transition: 1s;
-  transition: 1s;
-  width: 70vw;
-}
-
-.container header .wrapper h1 span {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  color: #d4d4d4;
-  background-color: #0f0f0f;
-}
-
-.container header .wrapper .btn-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 2rem auto;
-}
-
-.container header .wrapper .btn-container a {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  border: solid 0.2rem black;
-  color: black;
-  margin: 0 0.2rem;
-  padding: 0.5rem 1.2rem;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 0.7rem;
-}
-
-.container header .wrapper .btn-container a:hover {
-  -webkit-box-shadow: 0 0 0 0.2rem black;
-          box-shadow: 0 0 0 0.2rem black;
-  background-color: black;
-  color: #e0dfdf;
-  -webkit-transition: opacity 0.5s, border 0.3s;
-  transition: opacity 0.5s, border 0.3s;
-}
-
-.container header .wrapper .about {
-  margin: 20rem auto;
-  width: 100%;
-  max-width: 60%;
-  -webkit-animation: introLoad 0.9s forwards;
-          animation: introLoad 0.9s forwards;
-  padding: .1rem;
-}
-
-.container header .wrapper .about .margin {
-  margin: 16rem auto;
-}
-
-.container header .wrapper .about .margin h2 {
-  font-weight: normal;
-  padding: 0.5rem 1rem;
-  font-size: 3rem;
-  -webkit-transition: 1s;
-  transition: 1s;
-  border-bottom: solid 0.1rem;
-}
-
-.container header .wrapper .about .margin h2 i {
-  float: right;
-  font-size: 4.4rem;
-  margin: 0 0.5rem;
-}
-
-.container header .wrapper .about .margin h2 div {
-  color: #e6e1e1 !important;
-  margin: -2rem auto;
-}
-
-.container header .wrapper .about .margin h2 span {
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  color: #d4d4d4;
-  background-color: #0f0f0f;
-}
-
-.container header .wrapper .about .margin p {
-  color: #d4d4d4;
-  padding: 1rem 2rem;
-  font-size: 1.8rem;
-  -webkit-transition: 1s;
-  transition: 1s;
-}
-
-.container section .projects {
-  display: block;
-}
-
-.container section .projects h1 {
-  font-size: 4rem;
-}
-
-.container section .projects .card {
-  width: 100%;
-}
-
-.container section .projects .card .wrapper {
-  border: solid 0.1rem white;
-  margin: 3rem auto;
-  padding: 1.3rem;
-  float: left;
-}
-
-.container section .projects .card .wrapper .content {
-  float: left;
-  padding: 0.5rem;
-  width: 50%;
-}
-
-.container section .projects .card .wrapper .content h1 {
-  padding: 0.5rem;
-  font-size: 3rem;
-  color: #eeeeee !important;
-}
-
-.container section .projects .card .wrapper .content p {
-  padding: 0.5rem;
-  font-size: 1.2rem;
-  color: #cccccc;
-}
-
-.container section .projects .card .wrapper .content .technologies-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  padding: 0.5rem;
-}
-
-.container section .projects .card .wrapper .content .technologies-container i {
-  color: white;
-  font-size: 3rem;
-  margin: 0 0.5rem;
-}
-
-.container section .projects .card .wrapper .content .btn-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-}
-
-.container section .projects .card .wrapper .content .btn-container a {
-  color: white;
-  border: solid 0.1rem white;
-  margin: 1rem 0.5rem;
-  padding: 0.5rem 1.5rem;
-  font-size: 20px;
-  text-transform: uppercase;
-  letter-spacing: 0.2rem;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-
-.container section .projects .card .wrapper .content .btn-container a:hover {
-  background-color: white;
-  color: black;
-  -webkit-transition: opacity 0.3s, border 0.3s;
-  transition: opacity 0.3s, border 0.3s;
-}
-
-.container section .projects .card .wrapper img {
-  width: 50%;
-  padding: 0.1rem;
-}
-
-@media screen and (max-width: 1800px) {
-  body {
-    -webkit-transition: all 0.2s;
-    transition: all 0.2s;
-  }
-}
-
-@media screen and (max-width: 1400px) {
-  body {
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-  }
-}
-
-@media screen and (max-width: 1000px) {
-  body {
-    -webkit-transition: all 0.4s;
-    transition: all 0.4s;
-  }
-  nav {
-    margin-bottom: 5rem;
-  }
-  nav .container {
-    max-width: 100%;
-  }
-  nav ul {
-    display: none;
-  }
-  nav img {
-    display: block;
-  }
-  .container {
-    padding: 1rem;
-    max-width: 95%;
-  }
-  .container header {
-    margin: 9rem 0 !important;
-  }
-  .container header h1 {
-    width: 100% !important;
-    font-size: 12vw !important;
-  }
-  .btn-container a {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    font-size: 2.5vw !important;
-    padding: 1vw 2vw !important;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  body {
-    -webkit-transition: all 0.4s;
-    transition: all 0.4s;
-  }
-  .wrapper h1 {
-    font-size: 10vw !important;
-  }
-}
-
-@media screen and (max-width: 200px) {
-  body {
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-  }
-}
-
-button {
-  border: none;
-  background-color: transparent;
-}
-
-@-webkit-keyframes introLoad {
-  from {
-    -webkit-transform: translateY(180px);
-            transform: translateY(180px);
-  }
-  to {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
-}
-
-@keyframes introLoad {
-  from {
-    -webkit-transform: translateY(180px);
-            transform: translateY(180px);
-  }
-  to {
-    -webkit-transform: translateY(0);
-            transform: translateY(0);
-  }
 }
 /*# sourceMappingURL=index.css.map */
