--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -27,7 +27,7 @@ a {
     display: flex;
     justify-content: space-between;
     background-color: rgba(255, 255, 255, 0.971);
-    font-family: "Consolas", "Poppins", sans-serif;
+    font-family: "Poppins", "Consolas", sans-serif;
 
     padding: 1.4rem 11vw;
     width: 100%;
@@ -36,6 +36,7 @@ a {
     a {
       h1 {
         font-size: 1.5rem;
+        font-weight: normal;
         color: rgb(12, 12, 12);
       }
     }
@@ -71,7 +72,7 @@ a {
 
     header {
       padding: 1rem;
-      margin-top: 15.1%;
+      margin-top: 14%;
       .wrapper {
         padding: 1rem;
         animation: introLoad 1s forwards;
@@ -82,9 +83,13 @@ a {
           h1 {
             font-size: 5vw;
             width: auto;
+            color: transparent !important;
+            -webkit-text-stroke-width: 1.5px;
+            -webkit-text-stroke-color: rgb(238, 235, 235);
 
             span {
-              color: rgb(212, 212, 212);
+                          -webkit-text-stroke-width: 1.5px;
+            -webkit-text-stroke-color: rgb(238, 235, 235);
               background-color: rgb(15, 15, 15);
             }
           }
@@ -322,8 +327,8 @@ a {
     color: white !important;
 
     span {
-      // color: rgb(15, 15, 15) !important;
-      // background-color: white !important;
+      //color: rgb(15, 15, 15) !important;
+      //background-color: rgb(218, 218, 218) !important;
     }
   }
 
